added variables to restrict usage to https only on production

--- a/.env
+++ b/.env
@@ -15,6 +15,10 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+
+# Change the following to https on production!
+SECURE_SCHEME=http
+
 APP_SECRET=0b21ab78d3c9cf8f07694fcc35eea2ba
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
