--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ APP_SECRET=0b21ab78d3c9cf8f07694fcc35eea2ba
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
